# SO1-escalonadores

./: CMakeLists.txt  Makefile  README.md  fcfs.cpp  fcfs.h  main.cpp  process.cpp  process.h  rr.cpp  rr.h  sjf.cpp  sjf.h  util.cpp  util.h
instances/: inst01  inst02  jordy  rr  rr2  rr3  rr4  sjf01  sjf02
